Fire load complete notifications on Mac even when page loads quickly.

This broke with change r477889 (https://codereview.chromium.org/2917363002)
because it fired load complete notifications when the "loaded" flag
changes from false to true, but it failed to handle cases where we
swap in a new tree root that's already loaded, which happens with
local pages and data urls.

BUG=733334,699438

Review-Url: https://codereview.chromium.org/2961913002
Cr-Commit-Position: refs/heads/master@{#482818}

Former-commit-id: 1a48b88399b0324a2cc828db06f375c9ed3a777c